--- a/.gitignore
+++ b/.gitignore
@@ -299,3 +299,8 @@ TSWLatexianTemp*
 # option is specified. Footnotes are the stored in a file with suffix Notes.bib.
 # Uncomment the next line to have this generated file ignored.
 #*Notes.bib
+
+
+# for assignment 02 datasets datasets
+
+*_32x32.mat
